Add Escalation Module

--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -43,6 +43,16 @@
 	cursor     : pointer;
 }
 
+.escalationContent {
+	margin: 2%;
+}
+
+.btnNGroup {
+	margin-bottom: 0.5%;
+	cursor       : pointer;
+	float        : right;
+}
+
 .barStepsAsset {
 	.active {
 		color: #49b5f3;
