Update Asset Module include feedback from Ryan

--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -53,6 +53,11 @@
 	float        : right;
 }
 
+.table thead th {
+	text-align    : left;
+	vertical-align: top;
+}
+
 .barStepsAsset {
 	.active {
 		color: #49b5f3;
