Some fix include escalation, add missing translation words

--- a/ui/src/sass/SystemAdmin.scss
+++ b/ui/src/sass/SystemAdmin.scss
@@ -58,6 +58,14 @@
 	vertical-align: top;
 }
 
+.commonParametersForm .row label{
+	padding-right: 0%;
+}
+
+.commonParametersForm .row div{
+	padding-left: 0%;
+}
+
 .barStepsAsset {
 	.active {
 		color: #49b5f3;
